Changed names of tabs used by the teacher to see report-cards

--- a/app/views/teachers/_rc.html.haml
+++ b/app/views/teachers/_rc.html.haml
@@ -2,14 +2,14 @@
 
 %ul.nav.nav-tabs
   %li
-    = simple_link :for => "Worksheets", :href => '#pane-rc-ws', :id => 'tab-rc-ws'
+    = simple_link :for => "Worksheets", :href => '#pane-teacher-rc-1', :id => 'tab-teacher-rc-1'
   %li
-    = simple_link :for => "Overall", :href => '#pane-rc-all', :id => 'tab-rc-all'
+    = simple_link :for => "Overall", :href => '#pane-teacher-rc-2', :id => 'tab-teacher-rc-2'
   %li
-    = simple_link :for => "Specific", :href => '#pane-rc-one', :id => 'tab-rc-one'
+    = simple_link :for => "Specific", :href => '#pane-teacher-rc-3', :id => 'tab-teacher-rc-3'
 
 .tab-content
-  #pane-rc-ws.tab-pane
-  #pane-rc-all.tab-pane
-  #pane-rc-one.tab-pane
+  #pane-teacher-rc-1.tab-pane
+  #pane-teacher-rc-2.tab-pane
+  #pane-teacher-rc-3.tab-pane
 
