--- a/app/views/menus/teacher/_rc.html.haml
+++ b/app/views/menus/teacher/_rc.html.haml
@@ -1,6 +1,6 @@
 
 %ul.dropdown-menu.dropdown-inverse#teacher-rc{ :role => :menu }
   %li
-    = simple_link :for => "All Worksheets", :id => 'lnk-rc-ws'
+    = simple_link :for => "All Worksheets", :id => 'lnk-teacher-rc'
   %li
     = simple_link :for => "Deep Dive", :id => 'lnk-deep-dive'
