List existing worksheets of a quiz in the ws-builder tab itself

--- a/app/views/teachers/_wsb.html.haml
+++ b/app/views/teachers/_wsb.html.haml
@@ -4,10 +4,13 @@
   %li
     = simple_link :for => "Quizzes", :href => '#pane-wsb-quizzes', :id => 'tab-wsb-quizzes'
   %li
-    = simple_link :for => "Sections", :href => '#pane-wsb-sektions', :id => 'tab-wsb-sektions'
+    = simple_link :for => "Worksheets", :href => '#pane-wsb-existing', :id => 'tab-wsb-existing'
+  %li
+    = simple_link :for => "Make New", :href => '#pane-wsb-sektions', :id => 'tab-wsb-sektions'
 
 .tab-content
   #pane-wsb-quizzes.tab-pane
+  #pane-wsb-existing.tab-pane
   #pane-wsb-sektions.tab-pane
     = render :partial => 'teachers/wsb-sektions', :locals => { :teacher => teacher }
 
