--- a/app/views/toolbox/_requirement.html.haml
+++ b/app/views/toolbox/_requirement.html.haml
@@ -3,7 +3,7 @@
 
 .row-fluid.requirement
   .span2
-    .badge= "#{j + 1}"
+    .badge= "#{requirement.posn}"
   .span10
     .bottomline= "#{requirement.bottomline}" 
     .text= "#{requirement.text}"
