--- a/app/assets/stylesheets/bootstrap-overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap-overrides.css.scss
@@ -325,6 +325,9 @@ button[data-toggle='button'] {
   }
   border-bottom: 1px solid $gray ;
 
+  .bottomline { font-size: 12px ; color: $gradians-blue ; }
+  .text { font-size: 10px ; }
+
   .badge { 
     padding: 0px ; 
     padding: {
