--- a/app/views/layouts/teachers.html.haml
+++ b/app/views/layouts/teachers.html.haml
@@ -20,6 +20,8 @@
     = render :partial => 'menus/teacher/trapdoors' 
     = render :partial => 'menus/teacher/rc' 
 
+    = render :partial => 'toolbox/fdb-panel'
+
   -# #modals by itself is not hidden. But the modal partials within it are by themselves 
   #modals
     = render :partial => 'modals/user/account'
