--- a/app/views/toolbox/_fdb-panel.html.haml
+++ b/app/views/toolbox/_fdb-panel.html.haml
@@ -1,14 +1,30 @@
 
 #fdb-panel.no-remove
-  .question= "Does it look like an honest effort?"
-  - Requirement.honest.each do |m|
-    = render :partial => 'toolbox/requirement', :locals => { :requirement => m }
-  .question= "Is the work done relevant to the question?"
-  - Requirement.cogent.each do |m|
-    = render :partial => 'toolbox/requirement', :locals => { :requirement => m }
-  .question= "Is the work done complete?"
-  - Requirement.complete.each do |m|
-    = render :partial => 'toolbox/requirement', :locals => { :requirement => m }
-  .question= "Anything else?"
-  - Requirement.other.each do |m|
-    = render :partial => 'toolbox/requirement', :locals => { :requirement => m }
+  .row-fluid
+    .question.span7= "An honest effort ?"
+    .span4.offset1
+      - Requirement.honest.each do |m|
+        .row-fluid.hide.requirement{ :marker => m.id }
+          .row.bottomline= "#{m.bottomline}"
+          .row.text= "#{m.text}"
+  .row-fluid
+    .question.span7= "Is whats written relevant to the question ?"
+    .span4.offset1
+      - Requirement.cogent.each do |m|
+        .row-fluid.hide.requirement{ :marker => m.id }
+          .row.bottomline= "#{m.bottomline}"
+          .row.text= "#{m.text}"
+  .row-fluid
+    .question.span7= "Is it also complete ?"
+    .span4.offset1
+      - Requirement.complete.each do |m|
+        .row-fluid.hide.requirement{ :marker => m.id }
+          .row.bottomline= "#{m.bottomline}"
+          .row.text= "#{m.text}"
+  .row-fluid
+    .question.span7= "Anything else ?"
+    .span4.offset1
+      - Requirement.other.each do |m|
+        .row-fluid.hide.requirement{ :marker => m.id }
+          .row.bottomline= "#{m.bottomline}"
+          .row.text= "#{m.text}"
