--- a/app/views/toolbox/_fdb-panel.html.haml
+++ b/app/views/toolbox/_fdb-panel.html.haml
@@ -1,35 +1,29 @@
 
 #fdb-panel.no-remove
-  - if current_account.loggable_type == "Teacher"
-    .row-fluid.navbar
-      .score.pull-right.span4
-        .span7.marks
-        .span5.maxmarks
-        
   .row-fluid
     .question.span7= "An honest effort ?"
-    .span4.offset1
+    .span5
       - Requirement.honest.each do |m|
         .row-fluid.hide.requirement{ :marker => m.id }
           .row.bottomline= "#{m.bottomline}"
           .row.text= "#{m.text}"
   .row-fluid
-    .question.span7= "Is whats written relevant to the question ?"
-    .span4.offset1
+    .question.span7= "Is the work done relevant to the question?" 
+    .span5
       - Requirement.cogent.each do |m|
         .row-fluid.hide.requirement{ :marker => m.id }
           .row.bottomline= "#{m.bottomline}"
           .row.text= "#{m.text}"
   .row-fluid
-    .question.span7= "Is it also complete ?"
-    .span4.offset1
+    .question.span7= "Is it complete ?"
+    .span5
       - Requirement.complete.each do |m|
         .row-fluid.hide.requirement{ :marker => m.id }
           .row.bottomline= "#{m.bottomline}"
           .row.text= "#{m.text}"
   .row-fluid
     .question.span7= "Anything else ?"
-    .span4.offset1
+    .span5
       - Requirement.other.each do |m|
         .row-fluid.hide.requirement{ :marker => m.id }
           .row.bottomline= "#{m.bottomline}"
