Minor correction in autoclick logic

--- a/app/views/menus/teacher/_trapdoors.html.haml
+++ b/app/views/menus/teacher/_trapdoors.html.haml
@@ -2,3 +2,5 @@
 %ul.dropdown-menu{ :role => :menu }
   %li
     = simple_link :for => 'show chart', :id => 'trapdoor-show-chart'
+  %li
+    = simple_link :for => 'show scans', :id => 'trapdoor-show-scans'
