--- a/app/views/layouts/teachers.html.haml
+++ b/app/views/layouts/teachers.html.haml
@@ -75,7 +75,7 @@
           #wide-X
           #wide-wait
             = render :partial => 'toolbox/wait'
-          #graph-paper
+          #graph-paper.offset1
           #wide-grd-canvas
             .row-fluid
               = render :partial => 'toolbox/grd-toolbar'
