[students, teachers]: using the same code to show worksheet list

--- a/app/views/layouts/students.html.haml
+++ b/app/views/layouts/students.html.haml
@@ -5,11 +5,11 @@
 
 - content_for :toolbox do 
   #toolbox.hidden 
-    = render :partial => 'students/worksheets'
     = render :partial => 'toolbox/line'
     = render :partial => 'toolbox/preview'
     = render :partial => 'menus/user/account'
     = render :partial => 'students/trigger'
+    = render :partial => 'toolbox/fdb-panel'
 
 !!!5
 
