[student]: Showing feedback panel
Using the same code as is used for teachers.
Lots of name changes all around. Tab and panel names with numbers
are better than any descriptive name one can think of

--- a/app/views/menus/teacher/_rc.html.haml
+++ b/app/views/menus/teacher/_rc.html.haml
@@ -1,6 +1,6 @@
 
 %ul.dropdown-menu.dropdown-inverse#teacher-rc{ :role => :menu }
   %li
-    = simple_link :for => "All Worksheets", :id => 'lnk-teacher-rc'
+    = simple_link :for => "All Worksheets", :id => 'lnk-tc-rc'
   %li
     = simple_link :for => "Deep Dive", :id => 'lnk-deep-dive'
