--- a/app/views/teachers/_rc.html.haml
+++ b/app/views/teachers/_rc.html.haml
@@ -2,14 +2,14 @@
 
 %ul.nav.nav-tabs
   %li
-    = simple_link :for => "Worksheets", :href => '#pane-teacher-rc-1', :id => 'tab-teacher-rc-1'
+    = simple_link :for => "Worksheets", :href => '#pane-tc-rc-1', :id => 'tab-tc-rc-1'
   %li
-    = simple_link :for => "Overall", :href => '#pane-teacher-rc-2', :id => 'tab-teacher-rc-2'
+    = simple_link :for => "Overall", :href => '#pane-tc-rc-2', :id => 'tab-tc-rc-2'
   %li
-    = simple_link :for => "Specific", :href => '#pane-teacher-rc-3', :id => 'tab-teacher-rc-3'
+    = simple_link :for => "Specific", :href => '#pane-tc-rc-3', :id => 'tab-tc-rc-3'
 
 .tab-content
-  #pane-teacher-rc-1.tab-pane
-  #pane-teacher-rc-2.tab-pane
-  #pane-teacher-rc-3.tab-pane
+  #pane-tc-rc-1.tab-pane
+  #pane-tc-rc-2.tab-pane
+  #pane-tc-rc-3.tab-pane
 
