--- a/app/views/layouts/students.html.haml
+++ b/app/views/layouts/students.html.haml
@@ -33,7 +33,7 @@
         #left.g-panel.span4
           = render :partial => 'toolbox/paginator', :locals => { :id => 'left-paginator', :url => '#' }
           #left-1
-            = render :partial => 'students/ws'
+            = render :partial => 'students/rc'
         #wide.g-panel.span8
           #wide-X
 
