--- a/app/assets/stylesheets/bootstrap-overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap-overrides.css.scss
@@ -484,3 +484,19 @@ form.smart {
   } 
 }
 
+#how-it-works { 
+  .carousel-caption {
+    h4 {
+      font:{
+        size: 18px ;
+        weight: 300 ;
+      }
+      color: $orange ;
+    } 
+
+    p {
+      font-size: 12px ;
+      color: white ;
+    } 
+  } 
+}
