--- a/app/assets/stylesheets/bootstrap.css.scss
+++ b/app/assets/stylesheets/bootstrap.css.scss
@@ -4726,7 +4726,8 @@ a.thumbnail:hover {
   font-weight: 200;
   line-height: 21px;
   color: inherit;
-  background-color: #eeeeee;
+  // background-color: #eeeeee;
+  background-color: transparent ;
   -webkit-border-radius: 6px;
   -moz-border-radius: 6px;
   border-radius: 6px;
@@ -5451,7 +5452,6 @@ a.thumbnail:hover {
   position: absolute;
   left: 0;
   right: 0;
-  bottom: 0;
   padding: 15px;
   background: #333333;
   background: rgba(0, 0, 0, 0.75);
