Styling experiments with the .hero-unit and the carousel within it

--- a/app/assets/stylesheets/bootstrap-overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap-overrides.css.scss
@@ -4,7 +4,7 @@
   Hence, in case of a conflict, the directives defined here take precedence 
 */ 
 
-$gray: #191919 ;
+$gray: #191919 ; // rgb(25,25,25)
 $lightgray: lighten($gray, 30%) ;
 $gradians-blue: #6ca7ab ; // rgb(108,167,171)
 $orange:#ffa500 ; // rgb(255,165,0)
