--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -38,19 +38,19 @@
             .carousel-inner
               .item 
                 .carousel-caption
-                  %h4= "Select questions to make a Worksheet"
+                  %h4= "1. Select questions to make a Worksheet"
                   %p
                     We have a growing database of questions. And you are welcome to send your own 
                 = image_tag "landing/carousel-I.jpg"
               .item 
                 .carousel-caption
-                  %h4= "Students do their thing"
+                  %h4= "2. Students do their thing"
                   %p
                     They write as they normally do - with a pen, on paper
                 = image_tag "landing/carousel-II.jpg"
               .item 
                 .carousel-caption
-                  %h4= "We take a first-look"
+                  %h4= "3. We take a first-look"
                   %p
                     And provide feedback and statistics
                 = image_tag "landing/carousel-III.jpg"
