--- a/app/views/menus/user/_download.html.haml
+++ b/app/views/menus/user/_download.html.haml
@@ -1,9 +1,5 @@
 
-%ul#user-downloads.dropdown-menu
-  %li.nav-header= "Download for .."
+%ul#user-downloads.dropdown-menu{ :role => :menu }
   %li
-    %a{ :href => "#"}= "Microsoft Windows"
-  %li
-    %a{ :href => "#" }= "Linux"
-  %li
-    %a{ :href => "#" }= "Apple Macintosh"
+    %a{ :href => "#{server}/winbot/app.publish/winbot.application"}
+      Scanning Application - Scanbot
