[big one]: Rationalized class attributes to set on tabs
The following are the only class attributes that control whether purging, ajax
calls etc are invoked on tab-click

  1. nopurge-on-show
  2. nopurge-on-inactive
  3. nopurge-on-disabled
  4. nopurge-ever

These can be set either on
  1. ul.nav-tabs > li > a OR
  2. ul.nav-tabs itself - in which case all ul > li > a are said to have the
     same class attribute

--- a/app/views/teachers/_qzb-topics.html.haml
+++ b/app/views/teachers/_qzb-topics.html.haml
@@ -6,13 +6,13 @@
 
   .row-fluid.navbar
     = f.button :submit, :class => 'btn-inverse pull-right', :value => "Show Questions"
-  #vert-tab.tabbable.tabs-left.no-remove
-    %ul.nav.nav-tabs.span4.nopurge-on-show
+  #vert-tab.tabbable.tabs-left
+    %ul.nav.nav-tabs.span4.nopurge-ever
       - teacher.verticals.each do |m|
         %li{ :marker => "#{m.id}" }
           = simple_link :for => "#{m.name}", :toggle => :tab, 
           :href => "#vert-#{m.id}", :url => "course/topics_in?id=:prev&vertical=:id",
-          :prev => 'tab-qzb-courses', :class => :writeonce
+          :prev => 'tab-qzb-courses'
 
     -# List of students - by sektion - shown in a sektion-specific tab and wrapped in a <form>
     .tab-content.span7
