--- a/app/views/teachers/_qzb.html.haml
+++ b/app/views/teachers/_qzb.html.haml
@@ -4,9 +4,11 @@
   %li
     = simple_link :for => "Course", :href => '#pane-qzb-courses', :id => 'tab-qzb-courses'
   %li
-    = simple_link :for => "Topics", :href => '#pane-qzb-topics', :id => 'tab-qzb-topics'
+    = simple_link :for => "Topics", :href => '#pane-qzb-topics', 
+      :id => 'tab-qzb-topics', :class => 'nopurge-ever'
   %li
-    = simple_link :for => "Questions", :href => '#pane-qzb-questions', :id => 'tab-qzb-questions'
+    = simple_link :for => "Questions", :href => '#pane-qzb-questions', 
+      :id => 'tab-qzb-questions', :class => 'nopurge-on-disable'
 
 
 .tab-content
