--- a/app/views/teachers/_rc.html.haml
+++ b/app/views/teachers/_rc.html.haml
@@ -2,9 +2,11 @@
 
 %ul.nav.nav-tabs
   %li
-    = simple_link :for => "Worksheets", :href => '#pane-tc-rc-1', :id => 'tab-tc-rc-1'
+    = simple_link :for => "Worksheets", :href => '#pane-tc-rc-1', 
+      :id => 'tab-tc-rc-1', :class => 'nopurge-ever'
   %li
-    = simple_link :for => "Overall", :href => '#pane-tc-rc-2', :id => 'tab-tc-rc-2'
+    = simple_link :for => "Overall", :href => '#pane-tc-rc-2', 
+      :id => 'tab-tc-rc-2', :class => 'nopurge-on-inactive nopurge-on-show'
   %li
     = simple_link :for => "Specific", :href => '#pane-tc-rc-3', :id => 'tab-tc-rc-3'
 
