--- a/app/views/teachers/_wsb.html.haml
+++ b/app/views/teachers/_wsb.html.haml
@@ -6,7 +6,8 @@
   %li
     = simple_link :for => "Worksheets", :href => '#pane-wsb-existing', :id => 'tab-wsb-existing'
   %li
-    = simple_link :for => "Make New", :href => '#pane-wsb-sektions', :id => 'tab-wsb-sektions'
+    = simple_link :for => "Make New", :href => '#pane-wsb-sektions', :id => 'tab-wsb-sektions', 
+      :class => 'nopurge-ever'
 
 .tab-content
   #pane-wsb-quizzes.tab-pane
