--- a/app/views/toolbox/_grd-abacus.html.haml
+++ b/app/views/toolbox/_grd-abacus.html.haml
@@ -12,16 +12,16 @@
     %ul.nav.nav-tabs.span4.nopurge-on-show
       %li
         = simple_link :for => "An honest effort - even if incomplete?", 
-        :id => "tab-honest", :href => "#pane-honest", :class => :writeonce
+        :id => "tab-honest", :href => "#pane-honest"
       %li
         = simple_link :for => "Does it make sense?",
-        :id => "tab-cogent", :href => "#pane-cogent", :class => :writeonce
+        :id => "tab-cogent", :href => "#pane-cogent"
       %li
         = simple_link :for => "Is it complete?", :id => "tab-complete",
-        :href => "#pane-complete", :class => :writeonce
+        :href => "#pane-complete"
       %li
         = simple_link :for => "Anything else?", :id => "tab-other",
-        :href => "#pane-other", :class => :writeonce
+        :href => "#pane-other"
 
     -# List of students - by sektion - shown in a sektion-specific tab and wrapped in a <form>
     .tab-content.span7
