--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -18,7 +18,9 @@
         .span12
           .navbar.navbar-inverse
             .navbar-inner
-              %a.brand.span4.orange{ :href => "#"}= "Gradians.com"
+              %a.brand.span4{ :href => "#"}
+                = image_tag "logo-mit-beta-2.png"
+                .tagline.span6.offset3= "Grades will happen"
               %ul.nav.span8.pull-right
                 %li
                   %a{ :href => "#"}= "Home"
