Minor edit to landing page carousel

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -40,9 +40,9 @@
             .carousel-inner
               .item 
                 .carousel-caption
-                  %h4= "1. Select questions to make a Worksheet"
+                  %h4= "1. Make a worksheet"
                   %p
-                    We have a growing database of questions. And you are welcome to send your own 
+                    Pick questions from our growing database on topics you would like students to work on
                 = image_tag "landing/carousel-I.jpg"
               .item 
                 .carousel-caption
