--- a/app/assets/stylesheets/bootstrap-overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap-overrides.css.scss
@@ -138,12 +138,12 @@ $green: #57bc20 ;
 
 .single-line {
   padding: {
-    top: 5px ;
-    bottom: 2px ;
+    top: 3px ;
+    bottom: 3px ;
   } 
-  font-size: 12px ; 
+  min-height: 24px ;
+  font-size: 11px ; 
   cursor: pointer ; 
-  // border-bottom: 1px solid $lightgray ;
   color: white ;
   text-transform: lowercase ; 
   &:nth-child(odd) {
@@ -180,7 +180,7 @@ $green: #57bc20 ;
     }
   } 
   &.nodata {
-    .badge { display: none ; } 
+    .badge { background-color: white ; } 
   } 
   &.green {
     .badge { background-color: $green ; }
@@ -197,11 +197,12 @@ $green: #57bc20 ;
     font-size: 10px ;
     color: inherit ; 
     text-transform: uppercase ;
+    text-align: right ;
   } 
 
   .badge { 
      padding: 0px ; 
-     padding-top: 2px ;
+     padding-top: 4px ;
      text-align: center ;
      height: 16px ;
      width: 20px ;
@@ -211,6 +212,8 @@ $green: #57bc20 ;
        width: 8px ; 
        height: 8px ;
        padding-top: 0px ;
+       float: left ;
+       margin-top: 4px ;
      } 
      font: {
        size: 11px ;
@@ -259,7 +262,6 @@ $green: #57bc20 ;
 
   > .tab-content { 
     .single-line { 
-      font-size: 11px ; 
       min-height: 20px ;
     }
   }
