Wrong paths to .pngs

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -40,11 +40,11 @@
           #how-it-works.carousel.slide
             .carousel-inner
               .item 
-                = image_tag "landing/car-v1.png", :class => :offset1
+                = image_tag "landing/carousel-I.png", :class => :offset1
               .item 
-                = image_tag "landing/car-v2.png", :class => :offset1
+                = image_tag "landing/carousel-II.png", :class => :offset1
               .item 
-                = image_tag "landing/car-v3.png", :class => :offset1
+                = image_tag "landing/carousel-III.png", :class => :offset1
               -#
                 .carousel-caption
                   %h4= "1. Make a worksheet"
