[simple_link]: Support for :icon added.
If :icon is specified, then its ok for :for => blank
But one or the other (:icon, :for or both) must be specified

:icon => sth will add an <i class='sth'></i>

--- a/app/views/layouts/teachers.html.haml
+++ b/app/views/layouts/teachers.html.haml
@@ -53,6 +53,9 @@
                   = simple_link :for => "Report Cards", :as => :dropdown, :id => 'm-report-cards'
                 %li.dropdown
                   = simple_link :for => "Workbench", :as => :dropdown, :id => 'm-teacher-workbench'
+                %li.dropdown
+                  = simple_link :as => :dropdown, 
+                    :id => 'm-teacher-workbench', :icon => "icon-white icon-bell"
                 %li#cp-account-link.dropdown.pull-right
                   = simple_link :for => "Hello, #{tchr.first_name}", :as => :dropdown, :id => 'm-account'
       #desktop.row-fluid
