New images for landing page carousel

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -40,11 +40,11 @@
           #how-it-works.carousel.slide
             .carousel-inner
               .item 
-                = image_tag "landing/carousel-I.png", :class => :offset1
+                = image_tag "landing/slideshow-1.png"
               .item 
-                = image_tag "landing/carousel-II.png", :class => :offset1
+                = image_tag "landing/slideshow-2.png"
               .item 
-                = image_tag "landing/carousel-III.png", :class => :offset1
+                = image_tag "landing/slideshow-3.png"
               -#
                 .carousel-caption
                   %h4= "1. Make a worksheet"
